--- a/form.html
+++ b/form.html
@@ -49,3 +49,7 @@
         </form>
     </body>
 </html>
+for (let index = 0; index < 8; index++) {
+    document.write("<b>"+"aks"+"</b>"+"</br>");
+    
+}
