--- a/drop.htm
+++ b/drop.htm
@@ -85,3 +85,28 @@ css
   background: rgb(117, 221, 221);
   background-color: rgb(117, 221, 221);
 }
+//=================================================================================image 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  .img1{background-image:linear-gradient(rgba(221, 214, 214, 0.5), rgba(241, 241, 241, 0.849) ), url("https://media.istockphoto.com/photos/bangalore-medical-college-picture-id471539895?k=20&m=471539895&s=612x612&w=0&h=uzSDtmZyjDQOugZCiOC2MUEUX4e9Cz1Mb6KOFJLlk-c=");
+    height: 300px;background-repeat: no-repeat;background-size: cover;
+    width: 100%;
+  }
+  .img1 h3{
+    text-align: center;margin-top: 30px;
+    color: rgb(26, 153, 175);margin-bottom: 40px;
+  }
+  .img1 h6,button{
+    text-align: center;
+    margin-left: 60px;margin-right: 60px;margin-bottom: 40px;
+  }
+</style>
+<div class="img1">
+  <h3>OUTSTANDING LEADERSHIP AND EXTERNAL RELATIONS</h3>
+  <h6>DSU is guided by a committed group of individuals who uphold the highest ideals of our mission to provide quality education at a competitive cost.</h6>
+  <button type="button" class="btn btn-primary btn-lg">OUR ADMINISTRATION</button>
+<button type="button" class="btn btn-secondary btn-lg">OUR TRUSTEES</button>
+<button type="button" class="btn btn-primary btn-lg">OUR ALUMNI</button>
+
+</div>
