--- a/drop.htm
+++ b/drop.htm
@@ -110,3 +110,99 @@ css
 <button type="button" class="btn btn-primary btn-lg">OUR ALUMNI</button>
 
 </div>
+============================================================================================================cards
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- card1 -->
+<style>
+  .bord{
+    border: green 10px solid;
+  }
+  .bord h2{
+    text-align: center;border-bottom: red 2px;
+  }
+  .para{
+    margin-left: 30px;margin-right: 30px;
+  }
+            
+<div class="bord">
+  <h2 >A PROUD LEGACY, A PROMISING FUTURE</h2>
+  <br><br>
+  <div class="para">
+    DSU enjoys a long history as one of America’s Historically Black Colleges and Universities (HBCUs). Founded in 1891 as the State College for Colored Students, DSU is proud of our heritage as one of the country’s first land-grant educational institutions. Today, we’re a welcome center of learning for students from many backgrounds. Our current population includes a 63% African-American enrollment and an increasing number of Caucasian, Hispanic, Asian and other international students.
+  </div><br>
+<div class="row row-cols-1 row-cols-md-3 g-4 fs-6">
+  <div class="col bord">
+    <div class="card h-100">
+      <img src="https://media.istockphoto.com/photos/metal-wheels-with-story-telling-concept-picture-id1200481023?s=2048x2048" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title bg-primary text-white">OUR HISTORY</h5>
+        <p class="card-text">DSU offers a unique blend of past, present and future. Walk through our 356-acre campus and you’ll see centuries-old buildings. At the same time, you’ll find some of the country’s most skilled researchers discovering new innovations in the fields of medicine, military defense, agriculture and much more..</p>
+      </div>
+    </div>
+  </div>
+  <div class="col bord">
+    <div class="card h-100 border-succes">
+      <img src="https://media.istockphoto.com/photos/business-technology-internet-and-network-concept-automation-software-picture-id1203511371?k=20&m=1203511371&s=612x612&w=0&h=pyp_Z_DCtjBi3nM5eT1RkUd6PTxe_srNkL17T3t21PU=" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title bg-primary text-white">OUR PROGRAMS</h5>
+        <p class="card-text">DSU currently offers 44 undergraduate degree options, an impressive number for a school our size. We also offer 18 master’s degree programs and five doctoral degree programs in areas such as interdisciplinary applied mathematics/mathematical physics and educational leadership.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col bord">
+    <div class="card h-100">
+      <img src="https://media.istockphoto.com/photos/team-of-happy-indian-students-smiling-with-books-picture-id485376695?k=20&m=485376695&s=612x612&w=0&h=5ZNfAAfYZoBJT2W6qSqWYE8g9Zj_02a0Fwn_Gt70Gh0=" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title bg-primary text-white">OUR STUDENTS</h5>
+        <p class="card-text ">We welcome students from a variety of backgrounds. Our current enrollment stands at 5,054, 91% of whom are undergraduate students. Our ratio of male to female students is 33:67, and 82% of our freshmen live on campus in one of our eight residence halls.</p>
+      </div>
+    </div>
+  </div>
+
+</div></div>
+
+<!-- card2 -->
+<div class="card-group">
+  <div class="card">
+    <!-- <img src="..." class="card-img-top" alt="..."> -->
+    <div class="card-body">
+      <h5 class="card-title">Mission</h5>
+      <p class="card-text">To produce, develop and promote competent human resource in business management to meet the challenges in the modern business world.</p>
+      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+    </div>
+  </div>
+  <div class="card">
+    <!-- <img src="..." class="card-img-top" alt="..."> -->
+    <div class="card-body">
+      <h5 class="card-title">Vission</h5>
+      <p class="card-text">To empower our learners with business skills for wealth creation, poverty eradication and national development..</p>
+      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+    </div>
+  </div>
+  <div class="card">
+    <!-- <img src="..." class="card-img-top" alt="..."> -->
+    <div class="card-body">
+      <h5 class="card-title">Motto</h5>
+      <p class="card-text">Reap What You Sow.</p>
+      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+    </div>
+  </div>
+  <div class="card">
+    <!-- <img src="..." class="card-img-top" alt="..."> -->
+    <div class="card-body">
+      <h5 class="card-title">CORE VALUES</h5>
+      <p class="card-text">Discipline
+        Responsibility
+        Integrity
+        Team Work
+        Honesty
+        Efficiency and Effectiveness
+        Academic Excellence
+        Ethics.</p>
+      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+    </div>
+  </div>
+</div>
+
+
